ebnf/expressions.ebnf
expression = 
    simple_expression, [ boolean_operator, simple_expression ]
;

simple_expression = 
    [ "+" | "-" ], term, { [ "+" | "-" ], term }
;

term =
    factor, { ( "**" | "*" | "/" | % ), factor }
;

factor = 
    number |
    variable |
    bracketed_expression |
    function_call
;

variable = 
    identifier
;

function_call = 
    identifier, "(", expression, ")"
;

bracketed_expression = 
    "(", expression, ")"
;

boolean_operator = 
    "=" | "<" | ">" | "<=" | ">="
;
